version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 14.2

** Autocompletion `=`
Autocompleting `set` options that take a value now includes `=`.

** `-R` changed to `-r`
The `-R` option (`--trailing-return`) has been changed to `-r`.

** "West" pointer types
New `--west-pointer` and `-w` command-line options and a new `west-pointer`
`set` option allow specification of when to print `*`, `&`, and `&&` adjacent
to types ("west"):

    int *p;  // east
    int* p;  // west


* Changes in Cdecl 14.1.1

** Escaping quotes in dump strings
When dumping, quotes in strings are now properly escaped.

** Quoting lambda capture dump strings
When dumping, `this` and `*this` are now properly quoted.

** Fixed operator dump crash
Dumping an operator caused a crash: fixed.


* Changes in Cdecl 14.1

** Alternative tokens
Blocks, lambda captures, and reference functions now correctly print
alternative tokens when the option is enabled.

** Alternative tokens vs. di/trigraphs
If both alternative token and either di/trigraph options are set, alternative
tokens now have priority.

** C casting without a name
Now allowing C-style casting without a name:

    cdecl> cast to pointer to char
    (char*)

** Di/Trigraphs
Now correctly emitting di/trigraphs for lambda captures and `operator[]`.

** Debug output
The format of the debug output has been made more JSON5-like.

** Limit when `q` means `quit`
The `q` command is now recognized as a synonym for `quit` only when it's the
only thing on a line other than whitespace.  This now allows things like:

    cdecl> declare p, q as pointer to int
    int *p, *q;

to work without complaining that `q` is a **cdecl** keyword.

** Trailing return type
New `--trailing-return` and `-R` command-line options and `trailing-return`