@@ -381,7 +381,7 @@ and
 \f(CWunion\fP
 are always included in declarations.
 .TP
-.BI \-\-explicit-int \f1=\fPs "\f1 | \fP" "" \-I " s"
+.BI \-\-explicit-int \f1=\fPs "\f1 | \fP" "" \-i " s"
 Sets the integer types to
 .I s
 (which is case-insensitive)
@@ -1608,7 +1608,7 @@ Turns on explicit \f(CWint\fP for the integer types
 (See the
 .B \-\-explicit-int
 or
-.B \-I
+.B \-i
 option for details.)
 .TP
 .B noexplicit-ecsu
