@@ -9,10 +9,10 @@ cdecl: "--explicit-ecsu/-S" requires an argument
 cdecl: "--explicit-ecsu/-S" requires an argument
 cdecl: "x": invalid value for --explicit-ecsu/-S; must be a combination of e, c, s, or u
 cdecl: "x": invalid value for --explicit-ecsu/-S; must be a combination of e, c, s, or u
-cdecl: "--explicit-int/-I" requires an argument
-cdecl: "--explicit-int/-I" requires an argument
-cdecl: "x": invalid value for --explicit-int/-I; must be i, u, or {[u]{isl[l]}[,]}+
-cdecl: "x": invalid value for --explicit-int/-I; must be i, u, or {[u]{isl[l]}[,]}+
+cdecl: "--explicit-int/-i" requires an argument
+cdecl: "--explicit-int/-i" requires an argument
+cdecl: "x": invalid value for --explicit-int/-i; must be i, u, or {[u]{isl[l]}[,]}+
+cdecl: "x": invalid value for --explicit-int/-i; must be i, u, or {[u]{isl[l]}[,]}+
 cdecl: --help/-h and --version/-v are mutually exclusive
 cdecl: "x": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23
 cdecl: "x": invalid value for --language/-x; must be C, K&RC, C89, C95, C99, C11, C17, C23, C++, C++98, C++03, C++11, C++14, C++17, C++20, C++23
