@@ -15,6 +15,9 @@ with their complete changes, see the AUTHORS file.
 ** Autocompletion `=`
 Autocompleting `set` options that take a value now includes `=`.
 
+** `-I` changed to `-i`
+The `-I` option (`--explicit-int`) has been changed to `-i`.
+
 ** `-R` changed to `-r`
 The `-R` option (`--trailing-return`) has been changed to `-r`.
 
